Use new UseCGroupMemoryLimitForHeap JVM option
Use the new UseCGroupMemoryLimitForHeap JVM option to set the maximum
heap size. HEAP_SIZE_PERCENTAGE has been removed and replaced with
JAVA_MAX_RAM_FRACTION.